# gamecube-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: prepare_binary_asset.cmake
data/: signature_white.cpp  signature_white.hpp
data/debug_controller/: debug_controller_button_a.cpp  debug_controller_button_a.hpp  debug_controller_button_b.cpp  debug_controller_button_b.hpp  debug_controller_button_start.cpp  debug_controller_button_start.hpp  debug_controller_button_x.cpp  debug_controller_button_x.hpp  debug_controller_button_y.cpp  debug_controller_button_y.hpp  debug_controller_button_z.cpp  debug_controller_button_z.hpp  debug_controller_direction_down.cpp  debug_controller_direction_down.hpp  debug_controller_direction_left.cpp  debug_controller_direction_left.hpp  debug_controller_direction_right.cpp  debug_controller_direction_right.hpp  debug_controller_direction_up.cpp  debug_controller_direction_up.hpp  debug_controller_outline.cpp  debug_controller_outline.hpp  debug_controller_stick_left.cpp  debug_controller_stick_left.hpp  debug_controller_stick_right.cpp  debug_controller_stick_right.hpp  debug_controller_trigger_l.cpp  debug_controller_trigger_l.hpp  debug_controller_trigger_r.cpp  debug_controller_trigger_r.hpp
libraries/box2d/src/collision/: b2_broad_phase.cpp  b2_chain_shape.cpp  b2_circle_shape.cpp  b2_collide_circle.cpp  b2_collide_edge.cpp  b2_collide_polygon.cpp  b2_collision.cpp  b2_distance.cpp  b2_dynamic_tree.cpp  b2_edge_shape.cpp  b2_polygon_shape.cpp  b2_time_of_impact.cpp
libraries/box2d/src/common/: b2_block_allocator.cpp  b2_draw.cpp  b2_math.cpp  b2_settings.cpp  b2_stack_allocator.cpp  b2_timer.cpp
libraries/box2d/src/dynamics/: b2_body.cpp  b2_chain_circle_contact.cpp  b2_chain_circle_contact.h  b2_chain_polygon_contact.cpp  b2_chain_polygon_contact.h  b2_circle_contact.cpp  b2_circle_contact.h  b2_contact.cpp  b2_contact_manager.cpp  b2_contact_solver.cpp  b2_contact_solver.h  b2_distance_joint.cpp  b2_edge_circle_contact.cpp  b2_edge_circle_contact.h  b2_edge_polygon_contact.cpp  b2_edge_polygon_contact.h  b2_fixture.cpp  b2_friction_joint.cpp  b2_gear_joint.cpp  b2_island.cpp  b2_island.h  b2_joint.cpp  b2_motor_joint.cpp  b2_mouse_joint.cpp  b2_polygon_circle_contact.cpp  b2_polygon_circle_contact.h  b2_polygon_contact.cpp  b2_polygon_contact.h  b2_prismatic_joint.cpp  b2_pulley_joint.cpp  b2_revolute_joint.cpp  b2_weld_joint.cpp  b2_wheel_joint.cpp  b2_world.cpp  b2_world_callbacks.cpp
libraries/box2d/src/rope/: b2_rope.cpp
libraries/imgui/: imgui_impl_sdl2.cpp
licenses/: GRRLIB.txt  cmake_sdl2_modules.txt  pong-score-font.txt
scripts/: assets_to_h.sh
source/: constants.hpp  game.cpp  game.hpp  grrstate.cpp  grrstate.hpp  main.cpp  tex_2d.cpp  tex_2d.hpp
source/engine/: CMakeLists.txt  delta_time.cpp  delta_time.hpp  id.hpp  tex_2d.cpp  tex_2d.hpp  text.cpp  text.hpp  timer.cpp  timer.hpp  transform2d.hpp  vector2.hpp
source/engine/entities/: CMakeLists.txt  entity.hpp  game_object.cpp  game_object.hpp
source/game/: CMakeLists.txt  ball.cpp  ball.hpp  game.cpp  game.hpp  paddle.cpp  paddle.hpp  physics.cpp  physics.hpp  projectile.cpp  projectile.hpp  ship.cpp  ship.hpp
source/input/: CMakeLists.txt  axis.cpp  axis.hpp  button.cpp  button.hpp  gamepad.cpp  gamepad.hpp  input.cpp  input.hpp  stick.cpp  stick.hpp
source/utils/: CMakeLists.txt  colors.hpp  debug_controller.cpp  debug_controller.hpp  debug_controller_input.cpp  debug_controller_input.hpp  draw_box2d.cpp  draw_box2d.hpp  fonts.cpp  fonts.hpp  framerate.cpp  framerate.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
source/utils/debug_controllers/: CMakeLists.txt  debug_controller.cpp  debug_controller.hpp  debug_controller_input.cpp  debug_controller_input.hpp  manager.cpp  manager.hpp
source/utils/memory_cards/: card.hpp  manager.hpp
